# gru4rec-reproduction-and-audit

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: synth_sessions.tsv
docs/: README.md
docs/en/: case_study.md  executive_summary.md  mathematical_formulas.md  pipeline_explained.md  technical_report.md
docs/es/: case_study.md  executive_summary.md  mathematical_formulas.md  pipeline_explained.md  technical_report.md
notebooks/: 01_end_to_end_walkthrough.ipynb
results/: gru4rec_demo.config.json  model_tiny.config.json
scripts/: fetch_official.py  generate_visualizations.py  make_synth_data.py  preprocess_sessions.py  run_gru4rec.py
src/: __init__.py  metrics.py  report.py  visualizations.py
src/baselines/: __init__.py  markov.py  popularity.py
tests/: test_baselines.py  test_metrics.py
